--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steven Rincón - Portafolio</title>
-    <!-- Vinculamos el archivo CSS externo -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
-    <!-- ====== Encabezado y navegación ====== -->
     <header>
         <nav>
             <a href="index.html" class="logo">Steven.dev</a>
-            <div>
+            <div class="nav-links">
                 <a href="about.html">Sobre mí</a>
                 <a href="projects.html">Proyectos</a>
                 <a href="cv.html">CV</a>
@@ -22,7 +20,6 @@
         </nav>
     </header>
 
-    <!-- ====== Contenido principal ====== -->
     <main>
         <img src="assets/img/homepic.jpg" alt="Steven Rincón">
         <h1>Hola, soy Steven</h1>
@@ -30,12 +27,10 @@
         <a href="projects.html" class="btn">Ver mis proyectos</a>
     </main>
 
-    <!-- ====== Footer fijo al fondo ====== -->
     <footer>
         &copy; 2025 Steven Rincón - Todos los derechos reservados
     </footer>
 
-    <!-- Archivo JS para interactividad futura -->
     <script src="js/main.js"></script>
 </body>
 </html>
