correcciones de cv titulo y ruta

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"> <!-- Soporte para caracteres especiales -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Diseño responsive -->
-    <title>Sobre mí - Stephen Rincón</title> <!-- Título que aparece en la pestaña -->
+    <title>Sobre mí - Steven Rincón</title> <!-- Título que aparece en la pestaña -->
     <link rel="stylesheet" href="css/styles.css"> <!-- Vincula el CSS global -->
 </head>
 
@@ -14,7 +14,7 @@
 <header>
     <nav>
         <!-- Logo o nombre que enlaza a la página principal -->
-        <a href="index.html" class="logo">Stephen.dev</a>
+        <a href="index.html" class="logo">Steven.dev</a>
         <!-- Menú de navegación -->
         <div class="nav-links">
             <a href="about.html" class="active">Sobre mí</a>
@@ -30,7 +30,7 @@
     <h1>Sobre mí</h1>
     <!-- Sección con imagen y texto descriptivo -->
     <section class="about-section">
-        <img src="assets/img/homepic.jpg" alt="Stephen Rincón"> <!-- Foto personal -->
+        <img src="assets/img/homepic.jpg" alt="Steven Rincón"> <!-- Foto personal -->
         <div>
             <p>Soy un desarrollador Backend/Frontend especializado en PHP, MVC y diseño con Tailwind CSS...</p>
             <p>Con experiencia en optimización de rendimiento, internacionalización y automatización...</p>
@@ -41,7 +41,7 @@
 
 <!-- ====== Pie de página ====== -->
 <footer>
-    &copy; 2025 Stephen Rincón - Todos los derechos reservados
+    &copy; 2025 Steven Rincón - Todos los derechos reservados
 </footer>
 
 <!-- ====== Script para animar la entrada de la sección ====== -->
