--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"> <!-- Soporte para caracteres especiales -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Diseño responsive -->
-    <title>Contacto - Stephen Rincón</title> <!-- Título en la pestaña -->
+    <title>Contacto - Steven Rincón</title> <!-- Título en la pestaña -->
     <link rel="stylesheet" href="css/styles.css"> <!-- Estilos globales -->
 </head>
 
@@ -13,7 +13,7 @@
 <!-- ====== Encabezado ====== -->
 <header>
     <nav>
-        <a href="index.html" class="logo">Stephen.dev</a>
+        <a href="index.html" class="logo">Steven.dev</a>
         <div class="nav-links">
             <a href="about.html">Sobre mí</a>
             <a href="projects.html">Proyectos</a>
@@ -40,7 +40,7 @@
 
 <!-- ====== Pie de página ====== -->
 <footer>
-    &copy; 2025 Stephen Rincón - Todos los derechos reservados
+    &copy; 2025 Steven Rincón - Todos los derechos reservados
 </footer>
 
 <!-- ====== Script con detección inteligente ====== -->
