--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"> <!-- Soporte para caracteres especiales -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Diseño responsive -->
-    <title>CV - Stephen Rincón</title> <!-- Título en la pestaña -->
+    <title>CV - Steven Rincón</title> <!-- Título en la pestaña -->
     <link rel="stylesheet" href="css/styles.css"> <!-- Estilos globales -->
 </head>
 
@@ -13,7 +13,7 @@
 <!-- ====== Encabezado ====== -->
 <header>
     <nav>
-        <a href="index.html" class="logo">Stephen.dev</a>
+        <a href="index.html" class="logo">Steven.dev</a>
         <div class="nav-links">
             <a href="about.html">Sobre mí</a>
             <a href="projects.html">Proyectos</a>
@@ -27,17 +27,18 @@
 <main>
     <h1>Mi Currículum</h1>
     <p>Puedes visualizarlo directamente aquí o descargarlo.</p>
-    <!-- Contenedor con iframe para mostrar el PDF -->
     <div class="cv-container">
-        <iframe src="/assets/docs/CV_Steven_Rincon_Medina.pdf" width="100%" height="600px" style="border:none;"></iframe>
+        <!-- El estilo ahora viene desde styles.css -->
+        <iframe src="/assets/docs/CV_Steven_Rincon_Medina.pdf"
+        title="Currículum de Steven Rincón en formato PDF"></iframe>
     </div>
-    <!-- Botón para descargar el CV -->
     <a href="/assets/docs/CV_Steven_Rincon_Medina.pdf" download class="btn">Descargar CV</a>
 </main>
 
+
 <!-- ====== Pie de página ====== -->
 <footer>
-    &copy; 2025 Stephen Rincón - Todos los derechos reservados
+    &copy; 2025 Steven Rincón - Todos los derechos reservados
 </footer>
 
 <!-- ====== Script simple ====== -->
