--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <h1>Sobre mí</h1>
     <!-- Sección con imagen y texto descriptivo -->
     <section class="about-section">
-        <img src="assets/img/homepic.jpg" alt="Steven Rincón"> <!-- Foto personal -->
+        <img src="assets/img/home.png" alt="Steven Rincón"> <!-- Foto personal -->
         <div>
             <p>Soy un desarrollador Backend/Frontend especializado en PHP, MVC y diseño con Tailwind CSS...</p>
             <p>Con experiencia en optimización de rendimiento, internacionalización y automatización...</p>
