--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steven Rincón - Portafolio</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <img src="assets/img/homepic.jpg" alt="Steven Rincón">
+        <img src="/assets/img/home.png" alt="Steven Rincón">
         <h1>Hola, soy Steven</h1>
         <p>Desarrollador Backend/Frontend especializado en PHP, MVC y diseño con Tailwind CSS.</p>
         <a href="projects.html" class="btn">Ver mis proyectos</a>
