--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <img src="/assets/img/home.png" alt="Steven Rincón">
+        <img src="assets/img/home.png" alt="Steven Rincón">
         <h1>Hola, soy Steven</h1>
         <p>Desarrollador Backend/Frontend especializado en PHP, MVC y diseño con Tailwind CSS.</p>
         <a href="projects.html" class="btn">Ver mis proyectos</a>
