--- a/cv.html
+++ b/cv.html
@@ -29,10 +29,10 @@
     <p>Puedes visualizarlo directamente aquí o descargarlo.</p>
     <div class="cv-container">
         <!-- El estilo ahora viene desde styles.css -->
-        <iframe src="/assets/docs/cv.pdf"
+        <iframe src="assets/docs/cv.pdf"
         title="Currículum de Steven Rincón en formato PDF"></iframe>
     </div>
-    <a href="assets/docs/CV_Steven_Rincon_Medina.pdf" download class="btn">Descargar CV</a>
+    <a href="assets/docs/cv.pdf" download class="btn">Descargar CV</a>
 </main>
 
 
