--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
       {
         title: 'Sistema de Blog en PHP MVC',
         description: 'Aplicación modular con PDO, validación y diseño con Tailwind CSS.',
-        link: 'https://github.com/Steven/blog-mvc',
+        link: 'https://github.com/StephenRM-Dr/mi-portfolio',
         tags: ['PHP', 'MVC', 'TailwindCSS']
       },
       {
         title: 'API REST para Inventario',
         description: 'API construida en PHP con autenticación JWT y manejo de errores.',
-        link: 'https://github.com/Steven/api-inventario',
+        link: 'https://github.com/StephenRM-Dr/inventario-api',
         tags: ['PHP', 'API', 'MySQL']
       },
       {
         title: 'Landing Page Responsive',
         description: 'Página optimizada para SEO con Tailwind CSS y JavaScript.',
-        link: 'https://github.com/Steven/landing-page',
+        link: 'https://stephenrm-dr.github.io/portfolio/index.html',
         tags: ['HTML', 'CSS', 'JavaScript']
       },
       {
