cambio de idioma, boton agregado a la navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <a href="#proyectos">Proyectos</a>
         <a href="#cv">CV</a>
         <a href="#contacto">Contacto</a>
+        <!-- Botón de idioma -->
+        <button id="lang-toggle" class="btn-lang">
+        <img src="./assets/img/idioma us.png" alt="Cambiar a Español" width="24">
+        </button>
       </div>
     </nav>
   </header>
